--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "badminton-court",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://arpo201.github.io/badminton-court/",
   "dependencies": {
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
@@ -18,6 +19,8 @@
     "web-vitals": "^2.1.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
