--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "badminton-court",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://arpo201.github.io/badminton-court/",
   "dependencies": {
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
@@ -12,6 +11,7 @@
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
     "axios": "^0.26.1",
+    "gh-pages": "^3.2.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
