--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-BackEnd By Ping/node_modules
+API/.env
+API/node_modules
 backend/node_modules/
 Web/node_modules
 /.pnp
