--- a/Web/package.json
+++ b/Web/package.json
@@ -15,6 +15,8 @@
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "gh-pages": "^3.2.3",
+    "graphql": "^16.5.0",
+    "graphql-tag": "^2.12.6",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
