--- a/Web/package.json
+++ b/Web/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "sweetalert2": "^11.4.16",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
